--- a/SD.AOP.LogSite/Web.config
+++ b/SD.AOP.LogSite/Web.config
@@ -8,11 +8,13 @@
   <!--连接字符串-->
   <connectionStrings>
     <!--日志连接字符串-->
-    <add name="LogConnection" connectionString="Data Source=192.168.3.23;Initial Catalog=ShSoft_Log;User Id=sa;Password=shdev2014@;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
+    <add name="LogConnection" connectionString="Data Source=.;Initial Catalog=SD_AOP;User Id=sa;Password=123456;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <!--应用程序配置-->
   <appSettings>
+    <add key="WebName" value="六月版" />
+    <add key="TechSupport" value="哈尔滨山河软件有限公司" />
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
