--- a/SD.AOP.LogSite/Web.config
+++ b/SD.AOP.LogSite/Web.config
@@ -8,7 +8,7 @@
   <!--连接字符串-->
   <connectionStrings>
     <!--日志连接字符串-->
-    <add name="LogConnection" connectionString="Data Source=192.168.3.23;Initial Catalog=ShSoft_Log;User Id=sa;Password=123456;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
+    <add name="LogConnection" connectionString="Data Source=192.168.3.24;Initial Catalog=ShSoft_Log;User Id=sa;Password=ws2008!;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <!--应用程序配置-->
