--- a/SD.AOP.LogSite/Web.config
+++ b/SD.AOP.LogSite/Web.config
@@ -8,7 +8,7 @@
   <!--连接字符串-->
   <connectionStrings>
     <!--日志连接字符串-->
-    <add name="LogConnection" connectionString="Data Source=.;Initial Catalog=ShSoft_Log;User Id=sa;Password=shdev2014@;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
+    <add name="LogConnection" connectionString="Data Source=.;Initial Catalog=Framework2015;User Id=sa;Password=shdev2014@;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <!--应用程序配置-->
