--- a/SD.AOP.Core.Tests/SD.AOP.Core.Tests.csproj
+++ b/SD.AOP.Core.Tests/SD.AOP.Core.Tests.csproj
@@ -6,8 +6,8 @@
     <ProjectGuid>{57BBBE8C-84EF-4605-8B96-83ABE9FA0AB8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SD.AOP.CoreTests</RootNamespace>
-    <AssemblyName>SD.AOP.CoreTests</AssemblyName>
+    <RootNamespace>SD.AOP.Core.Tests</RootNamespace>
+    <AssemblyName>SD.AOP.Core.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
