--- a/SD.AOP.Core/SD.AOP.Core.csproj
+++ b/SD.AOP.Core/SD.AOP.Core.csproj
@@ -69,11 +69,12 @@
   <ItemGroup>
     <Compile Include="Aspects\ForAny\ExceptionAspcet.cs" />
     <Compile Include="Aspects\ForAny\NotThrowExceptionAspect.cs" />
-    <Compile Include="Aspects\ForAny\NotThrowNoArgExceptionAspect.cs" />
     <Compile Include="Aspects\ForMethod\RunningLogAspect.cs" />
-    <Compile Include="Aspects\ForMethod\RunningLogNoArgAspect.cs" />
     <Compile Include="Aspects\ForMethod\TransactionAspect.cs" />
     <Compile Include="Attributes\SkipExceptionAttribute.cs" />
+    <Compile Include="Configurations\LoggerProviderConfiguration.cs" />
+    <Compile Include="Implements\DefaultLogger.cs" />
+    <Compile Include="Interfaces\ILoggger.cs" />
     <Compile Include="Models\Entities\BaseLog.cs" />
     <Compile Include="Models\Entities\ExceptionLog.cs" />
     <Compile Include="Models\ValueObjects\ExceptionMessage.cs" />
@@ -82,7 +83,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Toolkits\Common.cs" />
     <Compile Include="Toolkits\LogBuilder.cs" />
-    <Compile Include="Toolkits\LogWriter.cs" />
     <Compile Include="Toolkits\SqlHelper.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -91,6 +91,7 @@
     <None Include="packages.config" />
     <None Include="Web.config.transform" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
