--- a/SD.AOP.Core.Tests/App.config
+++ b/SD.AOP.Core.Tests/App.config
@@ -1,14 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <!--日志记录者配置配置节点-->
+    <section name="loggerProviderConfiguration" type="SD.AOP.Core.LoggerProviderConfiguration, SD.AOP.Core"/>
+  </configSections>
+
+  <!--日志记录者配置配置，默认采用Sql Server记录-->
+  <loggerProviderConfiguration type="SD.AOP.Core.Implements.DefaultLogger" assembly="SD.AOP.Core"/>
+
   <!--连接字符串-->
   <connectionStrings>
     <!--日志连接字符串-->
-    <add name="LogConnection" connectionString="Data Source=.;Initial Catalog=Framework2015;User Id=sa;Password=shdev2014@;" providerName="" />
+    <add name="LogConnection" connectionString="Data Source=.;Initial Catalog=Realgoal.Log;User Id=sa;Password=realgoal123!;" providerName="" />
   </connectionStrings>
-
-  <!--应用程序配置-->
-  <appSettings>
-    <!--键：约定；值：connectionString name-->
-    <add key="LogConnection" value="LogConnection" />
-  </appSettings>
 </configuration>
