整理文件夹

--- a/SD.AOP.LogSite/SD.AOP.LogSite.csproj
+++ b/SD.AOP.LogSite/SD.AOP.LogSite.csproj
@@ -563,9 +563,7 @@
     <Content Include="Views\Menu\Index.cshtml" />
     <Content Include="Views\Menu\Update.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ViewModels\Inputs\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
