--- a/SD.AOP.LogSite/Web.Release.config
+++ b/SD.AOP.LogSite/Web.Release.config
@@ -4,10 +4,10 @@
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <!--连接字符串-->
-  <connectionStrings>
-    <!--日志连接字符串-->
-    <add name="LogConnection"
+  <!--<connectionStrings>-->
+  <!--日志连接字符串-->
+  <!--<add name="LogConnection"
          connectionString="Data Source=192.168.3.24;Initial Catalog=ShSoft_Log;User Id=sa;Password=ws2008!;MultipleActiveResultSets=true;"
-         providerName="System.Data.SqlClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-  </connectionStrings>
+         providerName="System.Data.SqlClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>-->
+  <!--</connectionStrings>-->
 </configuration>
