--- a/SD.AOP.LogSite/packages.config
+++ b/SD.AOP.LogSite/packages.config
@@ -13,5 +13,6 @@
   <package id="SD.FormatModel.EasyUI" version="1.0.0" targetFramework="net45" />
   <package id="SD.Infrastructure" version="1.1.2" targetFramework="net45" />
   <package id="SD.Infrastructure.MVC" version="1.0.3" targetFramework="net45" />
+  <package id="SD.JavascriptToolkits" version="1.0.0" targetFramework="net45" />
   <package id="SD.Toolkits.Recursion" version="1.0.5" targetFramework="net45" />
 </packages>
