--- a/sources/SD.AOP.LogSite/Web.config
+++ b/sources/SD.AOP.LogSite/Web.config
@@ -7,13 +7,20 @@
   <!--连接字符串-->
   <connectionStrings>
     <!--日志连接字符串-->
-    <add name="LogConnection" connectionString="Data Source=.;Initial Catalog=Realgoal.MES.YinQiao;User Id=sa;Password=realgoal123!;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
+    <add name="LogConnection" connectionString="Data Source=.;Initial Catalog=SD.IdentitySystem;User Id=sa;Password=realgoal123!;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <!--应用程序配置-->
   <appSettings>
+    <!--默认登录页-->
+    <add key="LoginPage" value="/User/Login" />
+    <!--默认错误页-->
+    <add key="ErrorPage" value="/Error.html" />
+    <!--开启身份认证-->
+    <add key="EnableAuthentication" value="true" />
     <add key="WebName" value="智灵MES" />
     <add key="TechSupport" value="黑龙江立高科技股份有限共享" />
+
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
