--- a/sources/SD.AOP.LogSite/Web.config
+++ b/sources/SD.AOP.LogSite/Web.config
@@ -7,7 +7,7 @@
   <!--连接字符串-->
   <connectionStrings>
     <!--日志连接字符串-->
-    <add name="LogConnection" connectionString="Data Source=.;Initial Catalog=SD.IdentitySystem;User Id=sa;Password=realgoal123!;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
+    <add name="LogConnection" connectionString="Data Source=.;Initial Catalog=SD.Log;User Id=sa;Password=realgoal123!;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <!--应用程序配置-->
