--- a/tests/SD.AOP.Core.Tests/App.config
+++ b/tests/SD.AOP.Core.Tests/App.config
@@ -11,6 +11,6 @@
   <!--连接字符串-->
   <connectionStrings>
     <!--日志连接字符串-->
-    <add name="LogConnection" connectionString="Data Source=.;Initial Catalog=Realgoal.Log;User Id=sa;Password=realgoal123!;" providerName="" />
+    <add name="LogConnection" connectionString="Data Source=.;Initial Catalog=SD.Log;User Id=sa;Password=realgoal123!;" providerName="" />
   </connectionStrings>
 </configuration>
