--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,8 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+*.lock
+*.ide
+*.ide-shm
+*.ide-wal
+/.vs/config/applicationhost.config
