--- a/sources/SD.AOP.Core/SD.AOP.Core.csproj
+++ b/sources/SD.AOP.Core/SD.AOP.Core.csproj
@@ -70,6 +70,7 @@
   <ItemGroup>
     <Compile Include="Aspects\ForAny\ExceptionAspcet.cs" />
     <Compile Include="Aspects\ForAny\NotThrowExceptionAspect.cs" />
+    <Compile Include="Aspects\ForAny\WriteFileExceptionAspect.cs" />
     <Compile Include="Aspects\ForMethod\RunningLogAspect.cs" />
     <Compile Include="Aspects\ForMethod\TransactionAspect.cs" />
     <Compile Include="Attributes\SkipExceptionAttribute.cs" />
