--- a/src/SD.AOP.Core/App.config
+++ b/src/SD.AOP.Core/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <!--日志记录者配置配置节点-->
@@ -11,6 +11,6 @@
   <!--连接字符串-->
   <connectionStrings>
     <!--日志连接字符串-->
-    <add name="LogConnection" connectionString="Data Source=.;Initial Catalog=LogDB;User Id=sa;Password=123456;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
+    <add name="LogConnection" connectionString="Data Source=.;Initial Catalog=LogDB;User Id=sa;Password=123456;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
