--- a/src/SD.AOP.Core/SD.AOP.Core.csproj
+++ b/src/SD.AOP.Core/SD.AOP.Core.csproj
@@ -4,6 +4,19 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>SD.AOP.Core</AssemblyName>
     <RootNamespace>SD.AOP.Core</RootNamespace>
+    <Version>2.0.0</Version>
+    <Authors>Lee</Authors>
+    <Company>SD</Company>
+    <Description>AOP组件</Description>
+    <Copyright>Copyright © SD 2018</Copyright>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>bin\Release\netstandard2.0\SD.AOP.Core.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>bin\Debug\netstandard2.0\SD.AOP.Core.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
