--- a/src/SD.AOP.LogViewer/packages.config
+++ b/src/SD.AOP.LogViewer/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoMapper" version="8.1.1" targetFramework="net461" />
+  <package id="AutoMapper" version="10.0.0" targetFramework="net461" />
   <package id="EasyUI" version="1.4.5" targetFramework="net45" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="jQuery" version="1.12.4" targetFramework="net45" />
@@ -9,10 +9,11 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
-  <package id="SD.Common" version="2.0.5" targetFramework="net461" />
+  <package id="SD.Common" version="3.0.1" targetFramework="net461" />
   <package id="SD.FormatModel.EasyUI" version="1.0.0" targetFramework="net45" />
-  <package id="SD.Infrastructure" version="2.1.9" targetFramework="net461" />
+  <package id="SD.Infrastructure" version="2.2.0" targetFramework="net461" />
   <package id="SD.Infrastructure.MVC" version="1.0.6" targetFramework="net461" />
   <package id="SD.JavascriptToolkits" version="1.0.0" targetFramework="net45" />
+  <package id="SD.Toolkits.Mapper" version="1.0.0" targetFramework="net461" />
   <package id="SD.Toolkits.Recursion" version="2.0.2" targetFramework="net461" />
 </packages>
