优化日志查看器网站；

--- a/src/SD.AOP.LogViewer/Web.config
+++ b/src/SD.AOP.LogViewer/Web.config
@@ -18,7 +18,7 @@
     <add key="ErrorPage" value="/Error.html" />
     <!--开启身份认证-->
     <add key="EnableAuthentication" value="true" />
-    <add key="WebName" value="SD - 日志查看器" />
+    <add key="WebName" value="SD" />
     <add key="TechSupport" value="SlamDunk Co.,Ltd" />
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
