优化日志网站；

--- a/src/SD.AOP.LogViewer/Web.config
+++ b/src/SD.AOP.LogViewer/Web.config
@@ -8,13 +8,7 @@
 
   <!--应用程序配置-->
   <appSettings>
-    <!--默认登录页-->
-    <add key="LoginPage" value="/User/Login" />
-    <!--默认错误页-->
-    <add key="ErrorPage" value="/Error.html" />
-    <!--开启身份认证-->
-    <add key="EnableAuthentication" value="true" />
-    <add key="WebName" value="SD" />
+    <add key="WebName" value="SD.Framework" />
     <add key="TechSupport" value="SlamDunk Co.,Ltd" />
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
