优化配置文件；

--- a/src/SD.AOP.Core.NET451/SD.AOP.Core.NET451.csproj
+++ b/src/SD.AOP.Core.NET451/SD.AOP.Core.NET451.csproj
@@ -63,6 +63,9 @@
     <Compile Include="..\SD.AOP.Core\Configurations\LoggerProviderConfiguration.cs">
       <Link>Configurations\LoggerProviderConfiguration.cs</Link>
     </Compile>
+    <Compile Include="..\SD.AOP.Core\Configurations\TextElement.cs">
+      <Link>Configurations\TextElement.cs</Link>
+    </Compile>
     <Compile Include="..\SD.AOP.Core\Implements\DefaultLogger.cs">
       <Link>Implements\DefaultLogger.cs</Link>
     </Compile>
@@ -97,6 +100,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Transactions" />
+    <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MrAdvice">
