--- a/src/SD.AOP.Core/App.config
+++ b/src/SD.AOP.Core/App.config
@@ -6,11 +6,8 @@
   </configSections>
 
   <!--日志记录者配置配置，默认采用Sql Server记录-->
-  <loggerProviderConfiguration type="SD.AOP.Core.Implements.DefaultLogger" assembly="SD.AOP.Core"/>
-
-  <!--连接字符串-->
-  <connectionStrings>
-    <!--日志连接字符串-->
-    <add name="LogConnection" connectionString="Data Source=.;Initial Catalog=LogDB;User Id=sa;Password=123456;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient"/>
-  </connectionStrings>
+  <loggerProviderConfiguration type="SD.AOP.Core.Implements.DefaultLogger" assembly="SD.AOP.Core">
+    <!--连接字符串-->
+    <connectionString>Data Source=.;Initial Catalog=LogDB;User Id=sa;Password=123456;MultipleActiveResultSets=true;</connectionString>
+  </loggerProviderConfiguration>
 </configuration>
