--- a/src/SD.AOP.Core.Tests/App.config
+++ b/src/SD.AOP.Core.Tests/App.config
@@ -6,13 +6,10 @@
   </configSections>
 
   <!--日志记录者配置配置，默认采用Sql Server记录-->
-  <loggerProviderConfiguration type="SD.AOP.Core.Implements.DefaultLogger" assembly="SD.AOP.Core"/>
-
-  <!--连接字符串-->
-  <connectionStrings>
-    <!--日志连接字符串-->
-    <add name="LogConnection" connectionString="Data Source=.;Initial Catalog=RemoteDB;User Id=sa;Password=realgoal123!;"/>
-  </connectionStrings>
+  <loggerProviderConfiguration type="SD.AOP.Core.Implements.DefaultLogger" assembly="SD.AOP.Core">
+    <!--连接字符串-->
+    <connectionString>Data Source=.;Initial Catalog=RemoteDB;User Id=sa;Password=realgoal123!;</connectionString>
+  </loggerProviderConfiguration>
 
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
