--- a/src/SD.AOP.Core.Tests/App.config
+++ b/src/SD.AOP.Core.Tests/App.config
@@ -1,22 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <configSections>
-    <!--日志记录者配置配置节点-->
-    <section name="loggerProviderConfiguration" type="SD.AOP.Core.LoggerProviderConfiguration, SD.AOP.Core"/>
+    <!--SD.AOP配置节点-->
+    <section name="sd.aop" type="SD.AOP.Core.AopSection, SD.AOP.Core"/>
   </configSections>
 
-  <!--日志记录者配置配置，默认采用Sql Server记录-->
-  <loggerProviderConfiguration type="SD.AOP.Core.Implements.DefaultLogger" assembly="SD.AOP.Core">
+  <!--SD.AOP配置-->
+  <sd.aop>
+    <!--日志记录者-->
+    <loggerProvider type="SD.AOP.Core.DefaultLogger" assembly="SD.AOP.Core" />
     <!--连接字符串-->
-    <connectionString>Data Source=.;Initial Catalog=RemoteDB;User Id=sa;Password=realgoal123!;</connectionString>
-  </loggerProviderConfiguration>
-
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
+    <connectionString value="Data Source=.;Initial Catalog=RemoteDB;User Id=sa;Password=realgoal123!;" />
+  </sd.aop>
 </configuration>
