--- a/src/SD.AOP.LogViewer/Web.config
+++ b/src/SD.AOP.LogViewer/Web.config
@@ -1,15 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <!--SD.Framework配置节点-->
+    <section name="sd.framework" type="SD.Infrastructure.FrameworkSection, SD.Infrastructure" />
+  </configSections>
+
   <!--连接字符串-->
   <connectionStrings>
     <!--日志连接字符串-->
-    <add name="LogConnection" connectionString="Data Source=.;Initial Catalog=SD.Project;User Id=sa;Password=123456;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=SD.Project;User Id=sa;Password=123456;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <!--应用程序配置-->
   <appSettings>
-    <add key="WebName" value="SD.Framework" />
-    <add key="TechSupport" value="SlamDunk Co.,Ltd" />
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
@@ -17,12 +20,17 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
 
+  <!--SD.Framework配置-->
+  <sd.framework>
+    <!--服务名称-->
+    <service.name>SD.Framework</service.name>
+    <!--服务显示名称-->
+    <service.displayName>SlamDunk Co.,Ltd</service.displayName>
+  </sd.framework>
+
   <system.web>
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.6.1" />
-    <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" timeout="2880" />
-    </authentication>
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
