--- a/src/SD.AOP.LogViewer/packages.config
+++ b/src/SD.AOP.LogViewer/packages.config
@@ -9,9 +9,9 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="SD.Common" version="3.0.3" targetFramework="net461" />
-  <package id="SD.FormatModel.EasyUI" version="1.0.0" targetFramework="net45" />
-  <package id="SD.Infrastructure" version="2.2.4" targetFramework="net461" />
-  <package id="SD.JavascriptToolkits" version="1.0.0" targetFramework="net45" />
+  <package id="SD.Infrastructure" version="3.0.0" targetFramework="net461" />
+  <package id="SD.Toolkits.EasyUI" version="1.0.0" targetFramework="net461" />
+  <package id="SD.Toolkits.JavaScript" version="1.0.0" targetFramework="net461" />
   <package id="SD.Toolkits.Mapper" version="1.0.0" targetFramework="net461" />
-  <package id="SD.Toolkits.Recursion" version="2.0.2" targetFramework="net461" />
+  <package id="SD.Toolkits.Recursion" version="2.0.3" targetFramework="net461" />
 </packages>
