1、增加MySQL日志记录者； 2、日志查看器增加MySQL仓储；

--- a/src/SD.AOP.Core.Tests/App.config
+++ b/src/SD.AOP.Core.Tests/App.config
@@ -8,8 +8,10 @@
   <!--SD.AOP配置-->
   <sd.aop>
     <!--日志记录者-->
-    <loggerProvider type="SD.AOP.Core.DefaultLogger" assembly="SD.AOP.Core" />
+    <!--<loggerProvider type="SD.AOP.SqlServerLogger" assembly="SD.AOP.Logger.SqlServer" />-->
+    <loggerProvider type="SD.AOP.MySqlLogger" assembly="SD.AOP.Logger.MySql" />
     <!--连接字符串-->
-    <connectionString value="Data Source=.;Initial Catalog=RemoteDB;User Id=sa;Password=realgoal123!;" />
+    <!--<connectionString value="Data Source=.;Initial Catalog=RemoteDB;User Id=sa;Password=realgoal123!;" />-->
+    <connectionString value="Server=localhost;Port=3306;Database=RemoteDB;User Id=root;Password=sh2015!;Allow User Variables=True;" />
   </sd.aop>
 </configuration>
