--- a/src/SD.AOP.Core/SD.AOP.Core.csproj
+++ b/src/SD.AOP.Core/SD.AOP.Core.csproj
@@ -3,7 +3,7 @@
     <TargetFrameworks>net451;net461;netstandard2.0</TargetFrameworks>
     <Authors>Lee</Authors>
     <Company>SD</Company>
-    <Description>AOP组件</Description>
+    <Description>SD.AOP 面向方面编程基础</Description>
     <Copyright>Copyright © SD 2021</Copyright>
     <AssemblyVersion>2.0.0</AssemblyVersion>
     <FileVersion>2.0.0.0</FileVersion>
@@ -20,15 +20,12 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Transactions" />
     <PackageReference Include="MrAdvice" Version="2.8.11" />
-    <PackageReference Include="SD.Common" Version="3.0.3" />
     <PackageReference Include="SD.Toolkits.Json" Version="1.0.1" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.7.0" />
     <PackageReference Include="MrAdvice" Version="2.8.11" />
-    <PackageReference Include="SD.Common" Version="3.0.3" />
     <PackageReference Include="SD.Toolkits.Json" Version="1.0.1" />
   </ItemGroup>
 </Project>
