--- a/src/SD.AOP.LogViewer/Web.config
+++ b/src/SD.AOP.LogViewer/Web.config
@@ -3,12 +3,15 @@
   <configSections>
     <!--SD.Framework配置节点-->
     <section name="sd.framework" type="SD.Infrastructure.FrameworkSection, SD.Infrastructure" />
+    <!--SD.IOC配置节点-->
+    <section name="sd.ioc" type="SD.IOC.Core.DependencyInjectionSection, SD.IOC.Core" />
   </configSections>
 
   <!--连接字符串-->
   <connectionStrings>
     <!--日志连接字符串-->
-    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=SD.Project;User Id=sa;Password=123456;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=RemoteDB;User Id=sa;Password=realgoal123!;MultipleActiveResultSets=true;" />-->
+    <add name="DefaultConnection" connectionString="Server=localhost;Port=3306;Database=RemoteDB;User Id=root;Password=sh2015!;" />
   </connectionStrings>
 
   <!--应用程序配置-->
@@ -27,6 +30,19 @@
     <!--服务显示名称-->
     <service.displayName>SlamDunk Co.,Ltd</service.displayName>
   </sd.framework>
+
+  <!--SD.IOC配置-->
+  <sd.ioc>
+    <!--As接口程序集列表-->
+    <asInterfaceAssemblies>
+      <!--<assembly name="SD.AOP.LogViewer.Repository.SqlServer" />-->
+      <assembly name="SD.AOP.LogViewer.Repository.MySql" />
+    </asInterfaceAssemblies>
+    <!--As自身程序集列表-->
+    <asSelfAssemblies>
+      <assembly name="SD.AOP.LogViewer" />
+    </asSelfAssemblies>
+  </sd.ioc>
 
   <system.web>
     <httpRuntime targetFramework="4.5" />
@@ -50,8 +66,16 @@
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
@@ -62,8 +86,16 @@
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+        <assemblyIdentity name="Microsoft.Extensions.DependencyInjection" publicKeyToken="adb9793829ddae60" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.7.0" newVersion="3.1.7.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Extensions.DependencyInjection.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.7.0" newVersion="3.1.7.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
