--- a/src/SD.AOP.LogViewer.Repository.MySql/SD.AOP.LogViewer.Repository.MySql.csproj
+++ b/src/SD.AOP.LogViewer.Repository.MySql/SD.AOP.LogViewer.Repository.MySql.csproj
@@ -5,6 +5,8 @@
 
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="8.0.25" />
+    <PackageReference Include="SD.Toolkits.Sql" Version="1.0.0" />
+    <PackageReference Include="SD.Toolkits.Sql.MySql" Version="1.0.0" />
     <PackageReference Include="SD.Infrastructure" Version="3.0.3" />
   </ItemGroup>
 
