--- a/src/SD.AOP.LogViewer.Repository.SqlServer/SD.AOP.LogViewer.Repository.SqlServer.csproj
+++ b/src/SD.AOP.LogViewer.Repository.SqlServer/SD.AOP.LogViewer.Repository.SqlServer.csproj
@@ -4,11 +4,15 @@
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net461'">
+    <PackageReference Include="SD.Toolkits.Sql" Version="1.0.0" />
+    <PackageReference Include="SD.Toolkits.Sql.SqlServer" Version="1.0.0" />
     <PackageReference Include="SD.Infrastructure" Version="3.0.3" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="System.Data.SqlClient" Version="4.7.0" />
+    <PackageReference Include="SD.Toolkits.Sql" Version="1.0.0" />
+    <PackageReference Include="SD.Toolkits.Sql.SqlServer" Version="1.0.0" />
     <PackageReference Include="SD.Infrastructure" Version="3.0.3" />
   </ItemGroup>
 
