--- a/src/SD.AOP.Logger.SqlServer/SD.AOP.Logger.SqlServer.csproj
+++ b/src/SD.AOP.Logger.SqlServer/SD.AOP.Logger.SqlServer.csproj
@@ -15,13 +15,14 @@
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net451'">
     <Reference Include="System.Configuration" />
-    <PackageReference Include="SD.Toolkits.Sql" Version="1.0.0" />
-    <PackageReference Include="SD.Toolkits.Sql.SqlServer" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.7.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="SD.Toolkits.Sql" Version="1.0.0" />
     <PackageReference Include="SD.Toolkits.Sql.SqlServer" Version="1.0.0" />
   </ItemGroup>
