--- a/src/SD.AOP.Core.Tests/App.config
+++ b/src/SD.AOP.Core.Tests/App.config
@@ -9,9 +9,11 @@
   <sd.aop>
     <!--日志记录者-->
     <!--<loggerProvider type="SD.AOP.SqlServerLogger" assembly="SD.AOP.Logger.SqlServer" />-->
-    <loggerProvider type="SD.AOP.MySqlLogger" assembly="SD.AOP.Logger.MySql" />
+    <!--<loggerProvider type="SD.AOP.MySqlLogger" assembly="SD.AOP.Logger.MySql" />-->
+    <loggerProvider type="SD.AOP.PgSqlLogger" assembly="SD.AOP.Logger.PostgreSQL" />
     <!--连接字符串-->
     <!--<connectionString value="Data Source=.;Initial Catalog=RemoteDB;User Id=sa;Password=realgoal123!;" />-->
-    <connectionString value="Server=localhost;Port=3306;Database=RemoteDB;User Id=root;Password=sh2015!;Allow User Variables=True;" />
+    <!--<connectionString value="Server=localhost;Port=3306;Database=RemoteDB;User Id=root;Password=sh2015!;Allow User Variables=True;" />-->
+    <connectionString value="Server=localhost;Port=5432;Database=RemoteDB;User Id=postgres;password=sh2015!;" />
   </sd.aop>
 </configuration>
