--- a/src/SD.AOP.Core.Tests/SD.AOP.Core.Tests.csproj
+++ b/src/SD.AOP.Core.Tests/SD.AOP.Core.Tests.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\SD.AOP.Core\SD.AOP.Core.csproj" />
     <ProjectReference Include="..\SD.AOP.Logger.MySql\SD.AOP.Logger.MySql.csproj" />
+    <ProjectReference Include="..\SD.AOP.Logger.PostgreSQL\SD.AOP.Logger.PostgreSQL.csproj" />
     <ProjectReference Include="..\SD.AOP.Logger.SqlServer\SD.AOP.Logger.SqlServer.csproj" />
   </ItemGroup>
 </Project>
