--- a/src/SD.AOP.LogViewer.Repository.PostgreSQL/SD.AOP.LogViewer.Repository.PostgreSQL.csproj
+++ b/src/SD.AOP.LogViewer.Repository.PostgreSQL/SD.AOP.LogViewer.Repository.PostgreSQL.csproj
@@ -3,13 +3,10 @@
     <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
   </PropertyGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <PackageReference Include="System.Data.SqlClient" Version="4.7.0" />
-  </ItemGroup>
-
   <ItemGroup>
+    <PackageReference Include="Npgsql" Version="4.1.9" />
     <PackageReference Include="SD.Toolkits.Sql" Version="1.0.1" />
-    <PackageReference Include="SD.Toolkits.Sql.SqlServer" Version="1.0.0" />
+    <PackageReference Include="SD.Toolkits.Sql.PostgreSQL" Version="1.0.0" />
     <PackageReference Include="SD.Infrastructure" Version="3.0.3" />
   </ItemGroup>
 
