--- a/src/SD.AOP.LogViewer/Web.config
+++ b/src/SD.AOP.LogViewer/Web.config
@@ -11,7 +11,8 @@
   <connectionStrings>
     <!--日志连接字符串-->
     <!--<add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=RemoteDB;User Id=sa;Password=realgoal123!;MultipleActiveResultSets=true;" />-->
-    <add name="DefaultConnection" connectionString="Server=localhost;Port=3306;Database=RemoteDB;User Id=root;Password=sh2015!;" />
+    <!--<add name="DefaultConnection" connectionString="Server=localhost;Port=3306;Database=RemoteDB;User Id=root;Password=sh2015!;" />-->
+    <add name="DefaultConnection" connectionString="Server=localhost;Port=5432;Database=RemoteDB;User Id=postgres;password=sh2015!;" />
   </connectionStrings>
 
   <!--应用程序配置-->
@@ -36,7 +37,8 @@
     <!--As接口程序集列表-->
     <asInterfaceAssemblies>
       <!--<assembly name="SD.AOP.LogViewer.Repository.SqlServer" />-->
-      <assembly name="SD.AOP.LogViewer.Repository.MySql" />
+      <!--<assembly name="SD.AOP.LogViewer.Repository.MySql" />-->
+      <assembly name="SD.AOP.LogViewer.Repository.PostgreSQL" />
     </asInterfaceAssemblies>
     <!--As自身程序集列表-->
     <asSelfAssemblies>
@@ -70,8 +72,20 @@
         <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
       </dependentAssembly>
       <dependentAssembly>
+        <assemblyIdentity name="System.Numerics.Vectors" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.4.0" newVersion="4.1.4.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.5.0" newVersion="4.0.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
         <assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
