--- a/src/SD.AOP.Core.Tests/App.config
+++ b/src/SD.AOP.Core.Tests/App.config
@@ -10,10 +10,12 @@
     <!--日志记录者-->
     <!--<loggerProvider type="SD.AOP.SqlServerLogger" assembly="SD.AOP.Logger.SqlServer" />-->
     <!--<loggerProvider type="SD.AOP.MySqlLogger" assembly="SD.AOP.Logger.MySql" />-->
-    <loggerProvider type="SD.AOP.PgSqlLogger" assembly="SD.AOP.Logger.PostgreSQL" />
+    <!--<loggerProvider type="SD.AOP.PgSqlLogger" assembly="SD.AOP.Logger.PostgreSQL" />-->
+    <loggerProvider type="SD.AOP.FbSqlLogger" assembly="SD.AOP.Logger.Firebird" />
     <!--连接字符串-->
     <!--<connectionString value="Data Source=.;Initial Catalog=RemoteDB;User Id=sa;Password=realgoal123!;" />-->
     <!--<connectionString value="Server=localhost;Port=3306;Database=RemoteDB;User Id=root;Password=sh2015!;Allow User Variables=True;" />-->
-    <connectionString value="Server=localhost;Port=5432;Database=RemoteDB;User Id=postgres;password=sh2015!;" />
+    <!--<connectionString value="Server=localhost;Port=5432;Database=RemoteDB;User Id=postgres;password=sh2015!;" />-->
+    <connectionString value="Data Source=.;Initial Catalog=|DataDirectory|REMOTEDB.FDB;User=sysdba;Password=masterkey;Character Set=utf8;Server Type=Embedded;Client Library=Firebird/fbclient.dll;" />
   </sd.aop>
 </configuration>
