--- a/src/SD.AOP.Core.Tests/SD.AOP.Core.Tests.csproj
+++ b/src/SD.AOP.Core.Tests/SD.AOP.Core.Tests.csproj
@@ -1,7 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFramework>net48</TargetFramework>
     <IsPackable>false</IsPackable>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SD.AOP.Core\SD.AOP.Core.csproj" />
+    <ProjectReference Include="..\SD.AOP.Logger.Firebird\SD.AOP.Logger.Firebird.csproj" />
     <ProjectReference Include="..\SD.AOP.Logger.MySql\SD.AOP.Logger.MySql.csproj" />
     <ProjectReference Include="..\SD.AOP.Logger.PostgreSQL\SD.AOP.Logger.PostgreSQL.csproj" />
     <ProjectReference Include="..\SD.AOP.Logger.SqlServer\SD.AOP.Logger.SqlServer.csproj" />
