--- a/src/SD.AOP.LogViewer/Web.config
+++ b/src/SD.AOP.LogViewer/Web.config
@@ -26,10 +26,10 @@
 
   <!--SD.Framework配置-->
   <sd.framework>
+    <!--应用程序名称-->
+    <application.name>SD.Framework</application.name>
     <!--服务名称-->
-    <service.name>SD.Framework</service.name>
-    <!--服务显示名称-->
-    <service.displayName>SlamDunk Co.,Ltd</service.displayName>
+    <service.name>SlamDunk Co.,Ltd</service.name>
   </sd.framework>
 
   <!--SD.IOC配置-->
