--- a/src/SD.AOP.LogViewer(Core)/SD.AOP.LogViewer(Core).csproj
+++ b/src/SD.AOP.LogViewer(Core)/SD.AOP.LogViewer(Core).csproj
@@ -15,14 +15,18 @@
     <Content Include="Content\**">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="favicon.ico">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="favicon.ico" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="favicon.ico" />
+    <None Update="Installers\Installer.WindowsService.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Installers\Installer.WindowsService.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
