--- a/src/SD.AOP.Core/SD.AOP.Core.csproj
+++ b/src/SD.AOP.Core/SD.AOP.Core.csproj
@@ -5,6 +5,7 @@
     <Company>SD</Company>
     <Description>SD.AOP 面向方面编程基础</Description>
     <Copyright>Copyright © SD 2021</Copyright>
+    <Version>2.0.0</Version>
     <AssemblyVersion>2.0.0</AssemblyVersion>
     <FileVersion>2.0.0.0</FileVersion>
   </PropertyGroup>
