--- a/src/SD.AOP.Logger.SqlServer/SD.AOP.Logger.SqlServer.csproj
+++ b/src/SD.AOP.Logger.SqlServer/SD.AOP.Logger.SqlServer.csproj
@@ -3,7 +3,7 @@
     <TargetFrameworks>net451;netstandard2.0</TargetFrameworks>
     <Authors>Lee</Authors>
     <Company>SD</Company>
-    <Description>SD.AOP - SQL Server日志记录提供者</Description>
+    <Description>SD.AOP - 日志提供者 - SQL Server实现</Description>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -15,10 +15,6 @@
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net451'">
     <Reference Include="System.Configuration" />
-  </ItemGroup>
-
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
