.NET Framework 4.0/4.5兼容性调整；

--- a/src/SD.AOP.Logger.SqlServer/SD.AOP.Logger.SqlServer.csproj
+++ b/src/SD.AOP.Logger.SqlServer/SD.AOP.Logger.SqlServer.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net451;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net40;net45;netstandard2.0</TargetFrameworks>
     <Authors>Lee</Authors>
     <Company>SD</Company>
     <Description>SD.AOP - 日志提供者 - SQL Server实现</Description>
@@ -13,7 +13,7 @@
     <DocumentationFile>bin\Release\$(TargetFramework)\SD.AOP.Logger.SqlServer.xml</DocumentationFile>
   </PropertyGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net451'">
+  <ItemGroup Condition=" $(TargetFramework.StartsWith('net4')) ">
     <Reference Include="System.Configuration" />
   </ItemGroup>
 
