--- a/src/SD.AOP.LogViewer(Core)/SD.AOP.LogViewer(Core).csproj
+++ b/src/SD.AOP.LogViewer(Core)/SD.AOP.LogViewer(Core).csproj
@@ -9,6 +9,9 @@
     <Company>SD</Company>
     <Description>SD.Framework - 日志查看器</Description>
     <Copyright>Copyright © SD 2021</Copyright>
+    <Version>1.0.0</Version>
+    <AssemblyVersion>1.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
