--- a/src/SD.AOP.Logger.Firebird/SD.AOP.Logger.Firebird.csproj
+++ b/src/SD.AOP.Logger.Firebird/SD.AOP.Logger.Firebird.csproj
@@ -4,6 +4,10 @@
     <Authors>Lee</Authors>
     <Company>SD</Company>
     <Description>SD.AOP - 日志提供者 - Firebird实现</Description>
+    <Copyright>Copyright © SD 2021</Copyright>
+    <Version>1.0.0</Version>
+    <AssemblyVersion>1.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
