--- a/src/SD.AOP.LogViewer(Core)/SD.AOP.LogViewer(Core).csproj
+++ b/src/SD.AOP.LogViewer(Core)/SD.AOP.LogViewer(Core).csproj
@@ -15,11 +15,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="favicon.ico" />
     <Content Include="Content\**">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="favicon.ico">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
